--- a/definitions-trimmed-migrate/.env.example
+++ b/definitions-trimmed-migrate/.env.example
@@ -1,4 +1,10 @@
-# AZURE BLOB STORAGE
+# GENERAL
+PORT=5000
+
+# AZURE STORAGE
+AZURE_QUEUE_CONNECTION_STRING=""
+AZURE_QUEUE_NAME="clearlydefined-definitions-trimmed-queue"
+AZURE_QUEUE_DEQUEUE_BATCH_SIZE="10"
 AZURE_BLOB_CONNECTION_STRING=""
 AZURE_BLOB_CONTAINER_NAME="develop-definition"
 
@@ -8,7 +14,11 @@ MONGO_DATABASE_NAME="clearlydefined"
 MONGO_COLLECTION_NAME="definitions-trimmed"
 
 # REDIS
-REDIS_CONNECTION_STRING=""
+REDIS_URL=""
+REDIS_PASSWORD=""
 
 # APP INSIGHTS
 APPLICATIONINSIGHTS_CONNECTION_STRING=""
+
+# MIGRATION
+MIGRATION_PROCESS="blob_processor OR blob_iterator"
