--- a/definitions-trimmed-migrate/package.json
+++ b/definitions-trimmed-migrate/package.json
@@ -4,25 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node ./dist/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Manny Martinez",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^18.13.0",
-    "@types/redis": "^4.0.11",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.12.0",
+    "@azure/storage-queue": "^12.12.0",
     "applicationinsights": "^2.4.2",
     "axios": "^1.3.3",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "mongodb": "^5.0.1",
-    "redis": "^4.6.4"
+    "redis": "^4.6.5"
   }
 }
