--- a/definitions-trimmed-migrate/package.json
+++ b/definitions-trimmed-migrate/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.0.1",
-    "redis": "^4.6.5"
+    "redis": "^4.6.5",
+    "throat": "^6.0.2"
   }
 }
